--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "scripts": {
     "start": "tsc -w",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
     "format": "prettier --write \"src/**/*.tsx\"",
     "lint": "tslint -p tsconfig.json",
     "prepare" : "npm run build",
