--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "editorjs-blocks-react-renderer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "EditorJS blocks renderer to semanticly beautiful html5 tags via React.",
   "keywords": [
-    "editorjs", "editor.js", "editor", "react", "renderer", "html5", "blocks"
+    "editorjs",
+    "editor.js",
+    "editor",
+    "react",
+    "renderer",
+    "html5",
+    "blocks"
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,11 +20,11 @@
     "test:watch": "jest --watch",
     "format": "prettier --write \"src/**/*.tsx\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
