--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "update:latest": "npm-check-updates -u"
   },
   "repository": {
     "type": "git",
@@ -40,23 +41,24 @@
     "dist/**/*"
   ],
   "devDependencies": {
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-html-parser": "^2.0.1",
-    "@types/react-test-renderer": "^16.9.3",
-    "jest": "^26.3.0",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1",
-    "ts-jest": "^26.1.4",
+    "@types/react-test-renderer": "^17.0.0",
+    "jest": "^26.6.3",
+    "npm-check-updates": "^10.2.5",
+    "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.1",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-html-parser": "^2.0.2"
   }
 }
