--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "preversion": "npm run lint && npm run format",
+    "version:bump": "npm version patch",
+    "version": "git add -A src",
     "postversion": "git push && git push --tags",
     "update:latest": "npm-check-updates -u"
   },
@@ -41,24 +42,24 @@
     "dist/**/*"
   ],
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-html-parser": "^2.0.1",
-    "@types/react-test-renderer": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.1",
     "jest": "^26.6.3",
-    "npm-check-updates": "^10.2.5",
+    "npm-check-updates": "^11.3.0",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1",
-    "ts-jest": "^26.4.4",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^26.5.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2"
   }
 }
