--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
-    "@types/react-html-parser": "^2.0.2",
     "@types/react-test-renderer": "^17.0.1",
     "jest": "^27.3.1",
     "npm-check-updates": "^11.8.5",
@@ -58,9 +57,9 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "html-react-parser": "^1.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-html-parser": "^2.0.2"
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": ">=14"
