--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "editorjs-blocks-react-renderer",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "EditorJS blocks renderer to semanticly beautiful html5 tags via React.",
   "keywords": [
     "editorjs",
@@ -42,24 +42,27 @@
     "dist/**/*"
   ],
   "devDependencies": {
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^27.0.2",
     "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-html-parser": "^2.0.1",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-html-parser": "^2.0.2",
     "@types/react-test-renderer": "^17.0.1",
-    "jest": "^26.6.3",
-    "npm-check-updates": "^11.3.0",
-    "prettier": "^2.2.1",
+    "jest": "^27.3.1",
+    "npm-check-updates": "^11.8.5",
+    "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "^27.0.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
