--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^14.14.37",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "@types/react-test-renderer": "^17.0.1",
     "jest": "^27.3.1",
     "npm-check-updates": "^11.8.5",
@@ -57,9 +59,11 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "html-react-parser": "^1.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "html-react-parser": "^1.3.0"
+  },
+  "peerDependencies": {
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "engines": {
     "node": ">=14"
