Added more keywords to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "editor.js",
     "editor",
     "react",
+    "render",
+    "next.js",
+    "nextjs",
+    "gatsby",
     "renderer",
     "html5",
     "blocks"
